--- a/requirements.txt
+++ b/requirements.txt
@@ -13,3 +13,8 @@ python-multipart>=0.0.5
 safetensors
 sentencepiece
 transitions==0.9.2
+googlemaps
+locationtagger
+newspaper3k
+lxml[html_clean]
+nltk
